--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -30,16 +30,10 @@
 
         <Button
             android:id="@+id/MPHomeButton"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/home" />
 
-        <Button
-            android:id="@+id/MPNextButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/next" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
